# setty

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  rustfmt.toml
.github/workflows/: build.yaml  release-images.yaml  release.yaml
examples/: README.md
examples/deprecation/: Cargo.toml  config.toml
examples/deprecation/src/: main.rs
examples/env/: Cargo.toml
examples/env/src/: main.rs
examples/jsonschema/: Cargo.toml  config-readme.md  config-schema.json  config.yaml
examples/jsonschema/src/: main.rs
examples/toml/: Cargo.toml  config1.toml  config2.toml
examples/toml/src/: main.rs
examples/validate/: Cargo.toml
examples/validate/src/: main.rs
setty/: Cargo.toml
setty-derive/: Cargo.toml
setty-derive/src/: attrs.rs  combine.rs  config.rs  default.rs  derive.rs  lib.rs
setty/src/: check_deprecated.rs  combine.rs  config.rs  errors.rs  format.rs  lib.rs  markdown.rs  merge_with_defaults.rs  schema.rs  source.rs
setty/src/types/: bytesize.rs  duration_string.rs  mod.rs  rfc3339.rs  url_or_path.rs
setty/tests/tests/: generated-schema.json  mod.rs  test_combine.rs  test_config.rs  test_derive.rs  test_deserialize.rs  test_format.rs  test_jsonschema.rs  test_markdown.rs  test_serialize.rs  test_source.rs  test_types.rs
