[package]
name = "setty-derive"
description = "Proc macros crate of the `setty` library."
categories = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }


[lib]
proc-macro = true


[features]
default = []

derive-clone = []
derive-debug = []
derive-eq = []
derive-deserialize = []
derive-serialize = []
derive-jsonschema = []
derive-validate = []

case-fields-lower = []
case-fields-pascal = []
case-fields-camel = []
case-fields-snake = []
case-fields-kebab = []


case-enums-lower = []
case-enums-pascal = []
case-enums-camel = []
case-enums-snake = []
case-enums-kebab = []
case-enums-any = []


[dependencies]
proc-macro2 = { version = "1", default-features = false }
syn = { version = "2" }
quote = { version = "1", default-features = false }
