[package]
name = "setty"
description = "Opinionated configuration library."
categories = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }


[features]
default = []

derive-clone = ["setty-derive/derive-clone"]
derive-debug = ["setty-derive/derive-debug"]
derive-partial-eq = ["setty-derive/derive-partial-eq"]
derive-eq = ["setty-derive/derive-eq"]
derive-deserialize = ["setty-derive/derive-deserialize"]
derive-serialize = ["setty-derive/derive-serialize", "dep:serde_with"]
derive-jsonschema = [
    "setty-derive/derive-jsonschema",
    "dep:serde_json",
    "dep:schemars",
    "schemars/derive",
]
derive-validate = ["setty-derive/derive-validate"]

case-fields-lower = ["setty-derive/case-fields-lower"]
case-fields-pascal = ["setty-derive/case-fields-pascal"]
case-fields-camel = ["setty-derive/case-fields-camel"]
case-fields-snake = ["setty-derive/case-fields-snake"]
case-fields-kebab = ["setty-derive/case-fields-kebab"]

case-enums-lower = ["setty-derive/case-enums-lower"]
case-enums-pascal = ["setty-derive/case-enums-pascal"]
case-enums-camel = ["setty-derive/case-enums-camel"]
case-enums-snake = ["setty-derive/case-enums-snake"]
case-enums-kebab = ["setty-derive/case-enums-kebab"]
case-enums-any = ["setty-derive/case-enums-any"]

fmt-toml = ["figment2/toml"]
fmt-json = ["figment2/json", "dep:serde_json"]
fmt-yaml = ["figment2/yaml", "dep:serde_yaml"]

type-bigdecimal04 = ["schemars/bigdecimal04", "dep:bigdecimal"]
type-chrono04 = ["schemars/chrono04", "dep:chrono"]
type-duration-string05 = ["dep:duration-string"]
type-url2 = ["schemars/url2", "dep:url"]

gen-jsonschema = ["derive-jsonschema"]
gen-markdown = ["derive-jsonschema"]

test = ["figment2/test"]


[dependencies]
setty-derive = { workspace = true }

figment2 = { version = "0.11", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }

# Optional
bigdecimal = { optional = true, version = "0.4", default-features = false }
chrono = { optional = true, version = "0.4", default-features = false, features = [
    "alloc",
] }

duration-string = { optional = true, version = "0.5", default-features = false, features = [
    "serde",
] }
schemars = { optional = true, version = "1", default-features = false }
serde_json = { optional = true, version = "1", features = [] }
serde_with = { optional = true, version = "3", default-features = false, features = [
    "macros",
] }
serde_yaml = { optional = true, package = "serde_norway", version = "0.9", default-features = false }
url = { optional = true, version = "2", default-features = false }


[dev-dependencies]
figment2 = { version = "0.11", default-features = false, features = ["test"] }
indoc = "2"
serial_test = "3"
pretty_assertions = { version = "1" }
